# rust-timeit

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: Cargo.toml.tmpl  expression.rs  main.rs  timeit.rs
templates/: Cargo.toml  expression.rs  timeit.rs
