[package]
name = "rust-timeit"
version = "0.3.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
edition = "2018"
description = "Tool for measuring execution time of small Rust code snippets."
readme = "README.md"
homepage = "https://github.com/bruceg/rust-timeit/"
repository = "https://github.com/bruceg/rust-timeit/"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools::profiling"]
keywords = ["benchmark", "criterion", "testing", "timing", "optimization"]

[dependencies]
argh = "0.1.9"
dirs = "4.0.0"
