[package]
name = "rust-timeit"
version = "0.3.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
edition = "2024"
description = "Tool for measuring execution time of small Rust code snippets."
readme = "README.md"
homepage = "https://github.com/bruceg/rust-timeit/"
repository = "https://github.com/bruceg/rust-timeit/"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools::profiling"]
keywords = ["benchmark", "criterion", "testing", "timing", "optimization"]
rust-version = "1.85"

[dependencies]
argh = { version = "0.1", default-features = false, features = ["help"] }
dirs = "6.0.0"
